--- a/server/.env.example
+++ b/server/.env.example
@@ -1,14 +1,15 @@
-# MongoDB Atlas Connection String
-MONGODB_URI=mongodb+srv://<username>:<password>@<cluster>.mongodb.net/mindvault?retryWrites=true&w=majority
+# PostgreSQL Database Connection
+DATABASE_URL=postgresql://username:password@localhost:5432/mindvault
 
-# OpenAI API Key for embeddings
-OPENAI_API_KEY=your_openai_api_key_here
+# Google Gemini API Key for embeddings and AI
+GEMINI_API_KEY=your_gemini_api_key_here
 
 # Server Port
 PORT=5000
 
-# Database Name
+# Database Configuration
+DB_HOST=localhost
+DB_PORT=5432
 DB_NAME=mindvault
-
-# Collection Name
-COLLECTION_NAME=notes
+DB_USER=username
+DB_PASSWORD=password
