--- a/server/package.json
+++ b/server/package.json
@@ -7,14 +7,15 @@
   "scripts": {
     "dev": "nodemon src/index.js",
     "start": "node src/index.js",
-    "setup:index": "node src/scripts/createVectorIndex.js"
+    "init:db": "node src/config/initDb.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.1.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^6.3.0",
-    "openai": "^4.24.1"
+    "pg": "^8.11.3",
+    "pgvector": "^0.1.8"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
