chore: Add project configuration files and CHANGELOG
- Add .nvmrc for Node version management (v20.19.6)
- Add .editorconfig for consistent coding style
- Create CHANGELOG.md documenting v1.0.0 release
- Update package.json description and add utility scripts
- Enhance .gitignore with additional patterns
- Update keywords to reflect PostgreSQL + Gemini stack

--- a/.gitignore
+++ b/.gitignore
@@ -24,10 +24,20 @@ lerna-debug.log*
 build/
 coverage/
 .cache/
+*.tsbuildinfo
 
 # Database
 *.db
 *.sqlite
+
+# OS
+Thumbs.db
+.directory
+
+# Temporary files
+*.tmp
+*.temp
+.temp/
 
 # OS
 Thumbs.db
