--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "d3-force-3d": "^3.0.6",
     "lucide-react": "^0.294.0",
+    "quill": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-force-graph": "^1.48.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
