chore: recommend npm-version-lens extension
Replace outdated/alternative npm version extensions with legalfina.npm-version-lens.

npm-version-lens provides:
- Color-coded version indicators in package.json
- One-click version updates via dropdown
- Inlay hints showing latest versions

Marketplace: https://marketplace.visualstudio.com/items?itemName=Legalfina.npm-version-lens

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,7 +6,7 @@
     "bradlc.vscode-tailwindcss",
     "dsznajder.es7-react-js-snippets",
     "christian-kohler.npm-intellisense",
-    "pflannery.vscode-versionlens",
+    "legalfina.npm-version-lens",
     "usernamehw.errorlens",
     "eamodio.gitlens"
   ]
